# AImon

./: .gitignore  404.html  CITATION.cff  README.md  adaptive_monitoring.html  classification_of_change_events_rule_based.html  classification_of_change_events_using_random_forest_classifier.html  classification_of_change_events_using_random_forest_classifier.ipynb  configuration_description.html  environment.yml  filtering_of_change_events_rule_based.html  index.html  main.html  main.ipynb  main.py  pyproject.toml  {os.path.abspath('..')}{self.kml_name_gis}
.github/workflows/: main.yml
.temp/: current_files.txt
config/: Obergurgl_2d_projection_config.json  Office_2d_projection_config.json  Trier_2d_projection_config.json  project_settings_office.jsnon  project_settings_trier.jsnon  project_settings_trier.json
demo/: classification_of_change_events_rule_based.ipynb  classification_of_change_events_unsupervised.ipynb  classification_of_change_events_using_random_forest_classifier.ipynb  filtering_of_change_events_rule_based.ipynb
docs/: adaptive_monitoring.ipynb  classification_of_change_events_rule_based.ipynb  classification_of_change_events_unsupervised.ipynb  classification_of_change_events_using_random_forest_classifier.ipynb  configuration_description.md  filtering_of_change_events_rule_based.ipynb  index.md  main.ipynb  visualization.ipynb
helpers/: utils.py
mkdocs/: mkdocs.yml
processing_module/: change_projection.py  pc_projection.py  scanner2cloud.py
search/: search_index.json
src/aimon/: main.py  (+6 more)
test_data/: .gitignore  trier_configuration.json
(+45 files in other folders)
